// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hoverOn > snapshot when hovering on a constructor 1`] = `
"\`\`\`
Constr: Fn(content) -> T<content>
\`\`\`
type constructor
"
`;

exports[`hoverOn > snapshot when hovering on a constructor reference 1`] = `
"\`\`\`
Constr: Fn(content) -> T<content>
\`\`\`
type constructor
"
`;

exports[`hoverOn > snapshot when hovering on a local fn 1`] = `
"\`\`\`
closure: Fn(b) -> a
\`\`\`
local declaration
"
`;

exports[`hoverOn > snapshot when hovering on an extern type 1`] = `
"\`\`\`
glb: Fn(x) -> x
\`\`\`
global declaration
"
`;

exports[`hoverOn > snapshot when hovering on an extern type reference 1`] = `
"\`\`\`
glb: Fn(x) -> x
\`\`\`
global declaration
"
`;

exports[`hoverOn > snapshot when hovering on global fn 1`] = `
"\`\`\`
glb: Fn(a, b) -> b
\`\`\`
global declaration
"
`;
